// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addRecipe calls store creator and returns result 1`] = `
Object {
  "message": undefined,
  "recipe": Object {
    "dateAdded": "2020-05-10 00:00:45.511 +00:00",
    "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
    "description": "the best recipe ever",
    "directions": Array [
      Object {
        "label": "section 1",
        "steps": Array [
          Object {
            "text": "step 1",
          },
          Object {
            "text": "step 2",
          },
        ],
      },
    ],
    "id": 123,
    "ingredients": Array [
      Object {
        "ingredients": Array [
          Object {
            "amount": "2",
            "name": "apples",
            "optional": true,
            "prep": "chopped",
            "toTaste": true,
            "unit": "cup",
          },
          Object {
            "name": "garlic",
            "optional": false,
            "prep": "minced",
            "rangedAmount": Object {
              "max": "10",
              "min": "5",
            },
            "toTaste": true,
            "unit": "tablespoon",
          },
        ],
        "label": "ingredient section 1",
      },
    ],
    "photo": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source": Object {
      "display": "Mandy's Kitchen",
      "url": "http://some.url.com/recipe",
    },
    "tags": Array [
      Object {
        "id": 1,
        "label": "tag 1",
        "typeid": 1,
      },
      Object {
        "id": 2,
        "label": "tag 2",
        "typeid": 1,
      },
    ],
    "timing": Object {
      "prep": Array [
        Object {
          "units": "MINUTE",
          "value": "2",
        },
      ],
      "total": Array [
        Object {
          "units": "MINUTE",
          "value": "20",
        },
        Object {
          "units": "HOUR",
          "value": "1",
        },
      ],
    },
    "title": "my first recipe",
  },
  "success": true,
}
`;

exports[`addTags multiple tags 1`] = `
Array [
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": 1,
    "recipeId": 123,
    "tagid": 1,
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
  Object {
    "createdAt": "2020-05-10 00:07:45.511 +00:00",
    "id": 2,
    "recipeId": 123,
    "tagid": 23,
    "updatedAt": "2020-05-10 00:08:45.511 +00:00",
  },
]
`;

exports[`constructDirections multiple direction sections 1`] = `
Array [
  Object {
    "directionSteps": Array [
      Object {
        "text": "step 1",
      },
    ],
    "label": "section 1",
  },
  Object {
    "directionSteps": Array [
      Object {
        "text": "step 1",
      },
      Object {
        "text": "step 2",
      },
    ],
  },
]
`;

exports[`constructDirections single direction section, all fields 1`] = `
Array [
  Object {
    "directionSteps": Array [
      Object {
        "text": "step 1",
      },
    ],
    "label": "section 1",
  },
]
`;

exports[`constructDirections single section, no steps provided, only label 1`] = `
Array [
  Object {
    "directionSteps": Array [],
    "label": "section 1",
  },
]
`;

exports[`constructDirections single section, only steps provided, no label 1`] = `
Array [
  Object {
    "directionSteps": Array [
      Object {
        "text": "step 1",
      },
      Object {
        "text": "step 2",
      },
    ],
  },
]
`;

exports[`constructIngredientObj only ingredient fields has subset of fields 1`] = `
Object {
  "name": "apples",
  "prep": "chopped",
}
`;

exports[`constructIngredientObj only ingredient fields has subset of fields that are false 1`] = `
Object {
  "name": "apples",
  "optional": false,
  "prep": "chopped",
  "toTaste": false,
}
`;

exports[`constructIngredients multiple ingredient sections 1`] = `
Array [
  Object {
    "ingredients": Array [
      Object {
        "amount": "2",
        "name": "apples",
        "optional": true,
        "prep": "chopped",
        "toTaste": true,
        "unit": "cup",
      },
    ],
    "label": "ingredient section 1",
  },
  Object {
    "ingredients": Array [
      Object {
        "amount": "1",
        "name": "garlic",
        "prep": "minced",
        "unit": "tablespoon",
      },
    ],
  },
]
`;

exports[`constructIngredients single ingredient section, all fields 1`] = `
Array [
  Object {
    "ingredients": Array [
      Object {
        "amount": "2",
        "name": "apples",
        "prep": "chopped",
        "unit": "cup",
      },
    ],
    "label": "ingredient section 1",
  },
]
`;

exports[`constructIngredients single section, no ingredients provided, only label 1`] = `
Array [
  Object {
    "ingredients": Array [],
    "label": "ingredient section 1",
  },
]
`;

exports[`constructIngredients single section, only ingredients provided, no label 1`] = `
Array [
  Object {
    "ingredients": Array [
      Object {
        "amount": "2",
        "name": "apples",
        "optional": true,
        "prep": "chopped",
        "toTaste": true,
        "unit": "cup",
      },
      Object {
        "name": "garlic",
        "optional": false,
        "prep": "minced",
        "rangedAmount": Object {
          "max": "10",
          "min": "5",
        },
        "toTaste": true,
        "unit": "tablespoon",
      },
    ],
  },
]
`;

exports[`deleteRecipe calls store destroy and returns result - id exists 1`] = `
Object {
  "message": undefined,
  "recipe": null,
  "success": true,
}
`;

exports[`deleteRecipe calls store destroy and returns result - id not found 1`] = `
Object {
  "message": "ID not found",
  "recipe": null,
  "success": false,
}
`;

exports[`getAllRecipes returns array of recipes 1`] = `
Array [
  Object {
    "dateAdded": "2020-05-10 00:00:45.511 +00:00",
    "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
    "description": "the best recipe ever",
    "directions": Array [
      Object {
        "label": "section 1",
        "steps": Array [
          Object {
            "text": "step 1",
          },
          Object {
            "text": "step 2",
          },
        ],
      },
    ],
    "id": 123,
    "ingredients": Array [
      Object {
        "ingredients": Array [
          Object {
            "amount": "2",
            "name": "apples",
            "optional": true,
            "prep": "chopped",
            "toTaste": true,
            "unit": "cup",
          },
          Object {
            "name": "garlic",
            "optional": false,
            "prep": "minced",
            "rangedAmount": Object {
              "max": "10",
              "min": "5",
            },
            "toTaste": true,
            "unit": "tablespoon",
          },
        ],
        "label": "ingredient section 1",
      },
    ],
    "photo": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source": Object {
      "display": "Mandy's Kitchen",
      "url": "http://some.url.com/recipe",
    },
    "tags": Array [
      Object {
        "id": 1,
        "label": "tag 1",
        "typeid": 1,
      },
      Object {
        "id": 2,
        "label": "tag 2",
        "typeid": 1,
      },
    ],
    "timing": Object {
      "prep": Array [
        Object {
          "units": "MINUTE",
          "value": "2",
        },
      ],
      "total": Array [
        Object {
          "units": "MINUTE",
          "value": "20",
        },
        Object {
          "units": "HOUR",
          "value": "1",
        },
      ],
    },
    "title": "my first recipe",
  },
]
`;

exports[`getRecipe returns recipe 1`] = `
Object {
  "dateAdded": "2020-05-10 00:00:45.511 +00:00",
  "dateUpdated": "2020-05-10 00:01:45.511 +00:00",
  "description": "the best recipe ever",
  "directions": Array [
    Object {
      "label": "section 1",
      "steps": Array [
        Object {
          "text": "step 1",
        },
        Object {
          "text": "step 2",
        },
      ],
    },
  ],
  "id": 123,
  "ingredients": Array [
    Object {
      "ingredients": Array [
        Object {
          "amount": "2",
          "name": "apples",
          "optional": true,
          "prep": "chopped",
          "toTaste": true,
          "unit": "cup",
        },
        Object {
          "name": "garlic",
          "optional": false,
          "prep": "minced",
          "rangedAmount": Object {
            "max": "10",
            "min": "5",
          },
          "toTaste": true,
          "unit": "tablespoon",
        },
      ],
      "label": "ingredient section 1",
    },
  ],
  "photo": "http://some.url.com/pic.jpg",
  "servings": 2,
  "source": Object {
    "display": "Mandy's Kitchen",
    "url": "http://some.url.com/recipe",
  },
  "tags": Array [
    Object {
      "id": 1,
      "label": "tag 1",
      "typeid": 1,
    },
    Object {
      "id": 2,
      "label": "tag 2",
      "typeid": 1,
    },
  ],
  "timing": Object {
    "prep": Array [
      Object {
        "units": "MINUTE",
        "value": "2",
      },
    ],
    "total": Array [
      Object {
        "units": "MINUTE",
        "value": "20",
      },
      Object {
        "units": "HOUR",
        "value": "1",
      },
    ],
  },
  "title": "my first recipe",
}
`;

exports[`getRecipeData valid id 1`] = `
Object {
  "recipe": Object {
    "createdAt": "2020-05-10 00:00:45.511 +00:00",
    "description": "the best recipe ever",
    "directionSections": Array [
      Object {
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "directionSteps": Array [
          Object {
            "createdAt": "2020-05-10 00:09:45.511 +00:00",
            "directionSectionId": 2,
            "id": 1,
            "text": "step 1",
            "updatedAt": "2020-05-10 00:10:45.511 +00:00",
          },
          Object {
            "createdAt": "2020-05-10 00:11:45.511 +00:00",
            "directionSectionId": 2,
            "id": 2,
            "text": "step 2",
            "updatedAt": "2020-05-10 00:12:45.511 +00:00",
          },
        ],
        "id": 2,
        "label": "section 1",
        "recipeId": 123,
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
    ],
    "id": 123,
    "ingredientSections": Array [
      Object {
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": 1,
        "ingredients": Array [
          Object {
            "amount": "2",
            "createdAt": "2020-05-10 00:07:45.511 +00:00",
            "id": 1,
            "ingredientSectionId": 2,
            "name": "apples",
            "optional": true,
            "prep": "chopped",
            "toTaste": true,
            "unit": "cup",
            "updatedAt": "2020-05-10 00:08:45.511 +00:00",
          },
          Object {
            "createdAt": "2020-05-10 00:07:45.511 +00:00",
            "id": 2,
            "ingredientSectionId": 2,
            "name": "garlic",
            "optional": false,
            "prep": "minced",
            "rangedAmount": Object {
              "createdAt": "2020-05-10 00:07:45.511 +00:00",
              "id": 1,
              "ingredientId": 2,
              "max": "10",
              "min": "5",
              "updatedAt": "2020-05-10 00:08:45.511 +00:00",
            },
            "toTaste": true,
            "unit": "tablespoon",
            "updatedAt": "2020-05-10 00:08:45.511 +00:00",
          },
        ],
        "label": "ingredient section 1",
        "recipeId": 123,
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
    ],
    "photo_url": "http://some.url.com/pic.jpg",
    "servings": 2,
    "source_display": "Mandy's Kitchen",
    "source_url": "http://some.url.com/recipe",
    "tags": Array [
      Object {
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": 1,
        "label": "tag 1",
        "recipeId": 123,
        "recipeTag": Object {
          "createdAt": "2020-05-23T00:20:58.070Z",
          "recipeId": 123,
          "tagId": 12,
          "updatedAt": "2020-05-23T00:20:58.070Z",
        },
        "tagType": Object {
          "createdAt": "2020-05-22T22:25:13.475Z",
          "id": 1,
          "label": "category",
          "updatedAt": "2020-05-22T22:25:13.475Z",
        },
        "tagTypeId": 1,
        "tagid": 12,
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
      Object {
        "createdAt": "2020-05-10 00:07:45.511 +00:00",
        "id": 2,
        "label": "tag 2",
        "recipeId": 123,
        "recipeTag": Object {
          "createdAt": "2020-05-23T00:20:58.070Z",
          "recipeId": 123,
          "tagId": 23,
          "updatedAt": "2020-05-23T00:20:58.070Z",
        },
        "tagType": Object {
          "createdAt": "2020-05-22T22:25:13.475Z",
          "id": 1,
          "label": "category",
          "updatedAt": "2020-05-22T22:25:13.475Z",
        },
        "tagTypeId": 1,
        "tagid": 23,
        "updatedAt": "2020-05-10 00:08:45.511 +00:00",
      },
    ],
    "timings": Array [
      Object {
        "createdAt": "2020-05-10 00:02:45.511 +00:00",
        "id": 1,
        "recipeId": 123,
        "type": "PREP",
        "units": "MINUTE",
        "updatedAt": "2020-05-10 00:03:45.511 +00:00",
        "value": "2",
      },
      Object {
        "createdAt": "2020-05-10 00:04:45.511 +00:00",
        "id": 2,
        "recipeId": 123,
        "type": "TOTAL",
        "units": "MINUTE",
        "updatedAt": "2020-05-10 00:05:45.511 +00:00",
        "value": "20",
      },
      Object {
        "createdAt": "2020-05-10 00:06:45.511 +00:00",
        "id": 3,
        "recipeId": 123,
        "type": "TOTAL",
        "units": "HOUR",
        "updatedAt": "2020-05-10 00:07:45.511 +00:00",
        "value": "1",
      },
    ],
    "title": "my first recipe",
    "updatedAt": "2020-05-10 00:01:45.511 +00:00",
  },
}
`;

exports[`updateRecipe id not found 1`] = `
Object {
  "message": "ID not found",
  "recipe": null,
  "success": false,
}
`;
